--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,11 +1,13 @@
-/* 
+body {
+  font-family: Arial, sans-serif;
+  background-color: #f8f9fa;
+}
 
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
+h3 {
+  font-weight: bold;
+}
 
-*/
+input[type="number"] {
+  max-width: 200px;
+  margin: 0 auto;
+}
